src/test/deca/context/valid/avecObjet/class_with_string_field.deca
// Description :
//    Classe contenant un champ de type string.
//
// Resultats :
//    OK

class A {
    int s;
}

{
}

