src/test/deca/context/invalid/classes/class_name_conflicts_with_builtin.deca
// Description :
//    Classe ayant le même nom qu'un type prédéfini.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 8 : Le nom de la classe int est interdit

class int {
    int x;
}

{
}

